token authentication part 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/api_error_center?useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
